--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+       <link rel="stylesheet" href="styles.css" type="text/css" />
     </head>
     <body>
-        <img src="http://www.hotszots.eu/_galler/IMG/FERRARI/ferrari-458-italia-tunnel-hd-wallpaper.jpg"></img>
+        <img width="2000px" src="http://carwallps.com/download/2535/best_gtr_wallpaper_1_rear_lamps.jpeg"></img>
         <h1> Ayukt Chaudhary </h1>
-        <p> Coding God </p>
+        <p> Coding God and Car Enthusiast  </p>
         <p> Will Code Anytime </p>
     </body>
 </html>
