Create Personal Website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <link rel="stylesheet" href="styles.css" type="text/css" />
     </head>
     <body>
-        <img width="2000px" src="http://carwallps.com/download/2535/best_gtr_wallpaper_1_rear_lamps.jpeg"></img>
+        <img src="http://carwallps.com/download/2535/best_gtr_wallpaper_1_rear_lamps.jpeg"></img>
         <h1> Ayukt Chaudhary </h1>
         <p> Coding God and Car Enthusiast  </p>
         <p> Will Code Anytime </p>
