Add index to personal website

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         
         <img src="https://s-media-cache-ak0.pinimg.com/originals/72/0c/a5/720ca5bb5a0a70ea0fb60e7db560c952.gif"></img>
         <iframe width="1425" height="710" src="https://www.youtube.com/embed/hepFlpCdTgU" frameborder="0" allowfullscreen></iframe>
-        Video courtesy of 
+        
+        <p>Video courtesy of </p>
         <a href="https://www.youtube.com/watch?v=hepFlpCdTgU" target="_blank">Monster Energy</a>.
         </p>
       <h1> Ayukt Chaudhary </h1>
