Add index to personal website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://www.youtube.com/watch?v=hepFlpCdTgU" target="_blank">Monster Energy</a>.
         </p>
       <h1> Ayukt Chaudhary </h1>
-    <p> Coding God and Car Enthusiast </p>
+    <p> Coding God and Car Enthusiasth </p>
     </body>
 </html>
 
