Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
        <link rel="stylesheet" href="styles.css" type="text/css" />
     </head>
     <body>
+       <h1 class=motors > Vissionary Motors </h1>
+       
         <div class="container"> 
             <img src="http://carwallps.com/download/2535/best_gtr_wallpaper_1_rear_lamps.jpeg"></img>
             <h1 class="gtr">Nissan GTR</h1> 
